--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Alcohol vs Seat choice"
-author: "Your Name"
+author: "Jonathan Paul P. Clavio"
 date: "Fall 2020"
 output: html_document
 ---
