Final Report rmd

--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -12,10 +12,14 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r include=FALSE}
 require(tidyverse)
 require(tigerstats)
+require(knitr)
 davisdata <- read.csv(file="UCDavis.csv")
 ```
 ## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
 ## you choose to sit in??
+
+$H_0$: There is no difference in alcohol consumed based on where you sit.  
+$H_A$: There is a difference in alcohol consumed based on where you sit.  
 
 ## Now with ggplot - first select the basic data
 
@@ -37,8 +41,28 @@ basicCN + geom_boxplot(notch=TRUE,outlier.color = "red") + stat_boxplot(geom ='e
 
 ## Numerical Summarys 
 
+```{r}
+favstats(alcohol~Seat,data=davisdata)
+```
+
+
 ## Inferential Tests
+
+```{r}
+model1 <- aov(alcohol~Seat,data=davisdata)
+summary.aov(model1)
+```
+
+```{r}
+#we specify the margins starting at the bottom and proceeding clockwise - thus 8.7 is the left side margin to hold the names of the factors
+par(mar = c(3, 8.7, 2, 2))
+plot(TukeyHSD(model1),las=2)
+```
 
 ## Conclusions
 
+It appears that sitting futher back that the alcohol consumed is higher based on boxplots and numerical summaries.  
+The P value is 0.000116 < 0.05 the null hypothesis extremely unlikely.   
+Therefore we reject the null hypothesis.    
+We conclude that there is a difference in seat location to how much alcohol is consumed.    
 
